2005-07-06  Not Zed  <NotZed@Ximian.com>

	* importers/pine-importer.c (pine_import):
	importers/elm-importer.c (elm_import):
	importers/evolution-mbox-importer.c (mbox_import): Dont create
	widgets anymore, report progress through the EImport and handle
	cancel.

2005-07-01  Not Zed  <NotZed@Ximian.com>

	* importers/Makefile.am: remove shell/importer link & take out
	netscape & outlook temporarily.

	* Makefile.am: Removed importer link.

2005-06-24	Matt Brown	<matt@mattb.net.nz>

	* em-inline-filter.c: implement extraction of inline signed/encrypted pgp
	parts and package them into x-inlinepgp-signed/x-inline-pgp-encrypted
	parts.
	* em-format-html.c: Formatters to verify/decrypt and then display the
	parts generated by the inline filter.

2005-06-25  Not Zed  <NotZed@Ximian.com>

	** See bug #307398

	* mail-session.c (alert_user): copy the prompt string, in 'no
	cancel' mode we run asynchronously.
	(free_user_message): & free it.

2005-06-24  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (efh_url_requested): dont pass data gtkhtml
	definitely can't handle, to gtkhtml.  This is no security patch,
	but stops gtkhtml wasting time tying to render malicious mails or
	other rubbish.

2005-06-21 Brian Mury <b.mury@ieee.org>

	** See bug #301466.

	* filtertypes.xml, searchtypes.xml, vfoldertypes.xml: fix the
	"match all" case to actually work.

2005-06-18  Tor Lillqvist  <tml@novell.com>

	* GNOME_Evolution_Mail.server.in.in: Use SOEXT.

2005-06-08  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (view_changed_cb): make this run a timeout so
	we don't update too often and suck loads of cpu time.

2005-06-07  Andre Klapper <9016009@gmx.de>
	* mail.error.xml: Fixing typo (bug 306151)

2005-06-02  Not Zed  <NotZed@Ximian.com>

	* Evolution-Mail.idl: only let this be included once.

	* mail-component.c (mail_component_class_init): Setup a test
	function, and fix the bonobo init function so we're actually a
	mailcomponent and not just an evolutioncomponent.
	